--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
+    "concurrently": "^6.1.0",
     "dotenv": "^9.0.2",
+    "json-server": "^0.16.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2"
   },
   "scripts": {
-    "start": "react-scripts start"
+    "frontend-start": "react-scripts start",
+    "backend-start": "json-server --watch data.json --port 3001",
+    "start": "concurrently \"yarn frontend-start\" \"yarn backend-start\""
   },
   "eslintConfig": {
     "extends": [
