--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "scripts": {
     "frontend-start": "react-scripts start",
     "backend-start": "json-server --watch data.json --port 3001",
-    "start": "concurrently \"yarn frontend-start\" \"yarn backend-start\""
+    "start": "concurrently \"yarn frontend-start\" \"yarn backend-start\"",
+    "lint": "eslint . --ext .ts"
   },
   "eslintConfig": {
     "extends": [
@@ -38,5 +39,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
+    "eslint": "^7.27.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0"
   }
 }
