--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
     "eslint": "^7.27.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0"
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "styled-components": "^5.3.0"
   }
 }
