--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 .idea
-node_modules/
 .DS_Store
-
-# Local
 .cache
 .env
-dist/
-*.log
+.idea/
+.vscode/
 build
+dist/
+node_modules/
+tmp/
+temp/
+*.log
