--- a/package.json
+++ b/package.json
@@ -1,51 +1,13 @@
 {
-  "name": "products",
-  "version": "0.1.0",
+  "name": "test-slabs",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/mdadm/test-slabs.git",
+  "author": "M Dadm <mdadm.prog@gmail.com>",
+  "license": "MIT",
   "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "axios": "^0.21.1",
-    "concurrently": "^6.1.0",
-    "dotenv": "^9.0.2",
-    "json-server": "^0.16.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "typescript": "^4.1.2"
-  },
-  "scripts": {
-    "frontend-start": "react-scripts start",
-    "backend-start": "json-server --watch data.json --port 3001",
-    "start": "concurrently \"yarn frontend-start\" \"yarn backend-start\"",
-    "lint": "eslint . --ext .ts"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@types/styled-components": "^5.1.9",
-    "@typescript-eslint/eslint-plugin": "^4.25.0",
-    "@typescript-eslint/parser": "^4.25.0",
-    "eslint": "^7.27.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "styled-components": "^5.3.0"
-  }
+  "workspaces": [
+    "frontend",
+    "backend"
+  ]
 }
