--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,14 @@
    "main": "index.js",
    "license": "MIT",
    "dependencies": {
+      "body-parser": "^1.19.0",
       "cors": "^2.8.5",
       "dotenv": "^9.0.2",
       "express": "^4.17.1",
+      "mysql": "^2.14.1",
       "pg": "^8.6.0",
-      "typeorm": "0.2.36",
       "reflect-metadata": "^0.1.10",
-      "mysql": "^2.14.1"
+      "typeorm": "0.2.36"
    },
    "devDependencies": {
       "@types/cors": "^2.8.10",
